--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -84,6 +84,12 @@
 	    border-color: #BBBBBB;
 	    margin-top: 5px;
 	}
+	ul.event_data_list {
+		height: 90px;
+	    overflow-x: hidden;
+	    width: 100%;
+	    overflow-y: scroll;
+	}
 </style>
 
 <script id='engaged-touchpoint-tpl' type="text/html" >
@@ -196,13 +202,13 @@
       <div class="col-md-10">
          <small class="text-muted pull-right"> <%- createdAt %> </small>
          <h5 class="media-heading"> <a target="_blank" rel="noreferrer" href="<%- srcTouchpoint.url %>" > <%- srcTouchpoint.name %> </a> </h5>
-         <div class="text-left small" > 
+         <div class="text-left" > 
 			 <b><i class="fa fa-info-circle" aria-hidden="true"></i> Action Data:</b> <br>  
-			 <i class="fa fa-commenting-o" aria-hidden="true"></i> Message: <mark class="small"> <%- message %></mark>  <br>
-			 <i class="fa fa-info-circle" aria-hidden="true"></i> Value: <mark> <%- metricValue %> </mark> <br>
+			 <i class="fa fa-commenting-o" aria-hidden="true"></i> Message: <mark> <%- message %></mark>  <br>
+			 <span> <i class="fa fa-info-circle" aria-hidden="true"></i> Value: <mark> <%- metricValue %> </mark> </span> <br>
 		 </div>
 		 <div class="text-left" style="margin-top: 5px;" >  
-			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
+			<b> <i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
 			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> - Payment: <mark> <%- transactionPayment %> </mark> <br>
 			<i class="fa fa-info" aria-hidden="true"></i> Status: <mark> <%- transactionStatus %> </mark> <br>
 			
@@ -219,9 +225,9 @@
  			</div>
 		 </div>
 		 <br>
- 		 <div class="text-wrap" style="display: <%- cssStyleDisplayEventData %>" >   
-			<span class="small" > <b> <i class="fa fa-info-circle" aria-hidden="true"></i> Event Data: </b> </span> 
-			<ul>
+ 		 <div class="text-wrap small" style="display: <%- cssStyleDisplayEventData %>" >   
+			<b> <i class="fa fa-info-circle" aria-hidden="true"></i> Event Data: </b>
+			<ul class="event_data_list">
 			<% _.forOwn(eventData, function(value, key) { %>
 				<li> <b><%- key %></b> : <mark><%- decodeObjectValue(key, value) %></mark>  </li>
 			<% }) %>
@@ -279,7 +285,7 @@
 
          <div class="text-left" style="margin-top: 5px;"  >  
 			
-			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
+			<b><i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
 			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> Status: <mark> <%- transactionStatus %> </mark>  <br>
 			<i class="fa fa-usd" aria-hidden="true"></i> Transaction Value: <mark> <%- transactionValue %> <%- transactionCurrency %> </mark> - Payment: <mark> <%- transactionPayment %> </mark> <br>
 			<i class="fa fa-usd" aria-hidden="true"></i> Discount Value: <mark> <%- transactionDiscount %> <%- transactionCurrency %> </mark> <br>
@@ -298,9 +304,9 @@
 		 </div>
 		 
 		
-		 <div class="text-wrap" style="display: <%- cssStyleDisplayEventData %>;" >  
+		 <div class="text-wrap small" style="display: <%- cssStyleDisplayEventData %>;" >  
 			<span class="small" > <b> <i class="fa fa-info-circle" aria-hidden="true"></i> Event Data: </b> </span> 
-			<ul class="small" >
+			<ul class="event_data_list">
 			<% _.forOwn(eventData, function(value, key) { %>
 				<li> <b><%- key %></b> : <mark><%- decodeObjectValue(key, value) %></mark>  </li>
 			<% }) %>
