only show event transaction when has data

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -207,7 +207,7 @@
 			 <i class="fa fa-commenting-o" aria-hidden="true"></i> Message: <mark> <%- message %></mark>  <br>
 			 <span> <i class="fa fa-info-circle" aria-hidden="true"></i> Value: <mark> <%- metricValue %> </mark> </span> <br>
 		 </div>
-		 <div class="text-left" style="margin-top: 5px;" >  
+		 <div class="text-left" style="margin-top: 5px; display: <%- cssStyleDisplayTransactionData %>" >  
 			<b> <i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
 			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> - Payment: <mark> <%- transactionPayment %> </mark> <br>
 			<i class="fa fa-info" aria-hidden="true"></i> Status: <mark> <%- transactionStatus %> </mark> <br>
