fix bugs, improve UI

--- a/public/css/leo-admin.css
+++ b/public/css/leo-admin.css
@@ -408,8 +408,8 @@ div.gridholder {
 }
 
 .panel-leoadmin > .panel-heading{
-    color: #484848;
-    background-color: #D3D3D3;
+    color: #3300ff;
+    background-color: #E2E2E2;
     border-color: #ddd;
 }
 
