fix bugs Custom Query Filter in segment

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -242,7 +242,7 @@
 					<b> Original Price </b> : <mark> <%- item.originalPrice %> <%- item.currency %></mark>  <br>
 					<b> Sale Price </b> : <mark> <%- item.salePrice %> <%- item.currency %> </mark>  <br>
 					<b> Quantity </b> : <mark> <%- item.quantity %> </mark>  <br>
-					<b> Discount </b> : <mark> <%- item.discount %> <%- item.currency %>  <%- item.couponCode %> </mark> <br>
+					<b> Coupon Code </b> : <mark> <%- item.discount %> <%- item.currency %>  <%- item.couponCode %> </mark> <br>
 					<b> Category ID </b> : <mark> <%- item.categoryId %> </mark>  <br>
 					<b> Category Name </b> : <mark> <%- item.categoryName %> </mark> 
 				</div>
@@ -351,7 +351,7 @@
 						<b> Original Price </b> : <mark> <%- item.originalPrice %> <%- item.currency %></mark>  <br>
 						<b> Sale Price </b> : <mark> <%- item.salePrice %> <%- item.currency %> </mark>  <br>
 						<b> Quantity </b> : <mark> <%- item.quantity %> </mark>  <br>
-						<b> Discount </b> : <mark> <%- item.discount %> <%- item.currency %>  <%- item.couponCode %> </mark> <br>
+						<b> Coupon Code </b> : <mark> <%- item.discount %> <%- item.currency %>  <%- item.couponCode %> </mark> <br>
 						<b> Category ID </b> : <mark> <%- item.categoryId %> </mark>  <br>
 						<b> Category Name </b> : <mark> <%- item.categoryName %> </mark>   <br>
 					</div>
