--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -129,7 +129,7 @@ LeoObserver.recordEvent<%- eventMetricName %> = function(eventData) {
 					</div>
 	            </div>
 				<div id="code_holder" ><textarea id="data_observer_code" class="code">
-// (1) CDP EVENT OBSERVER: load JavaScript code for [__tpHubName__]
+// (1) CDP_EVENT_OBSERVER: load JavaScript code for [__tpHubName__]
 (function() { 	
 	// Observer ID
 	window.leoObserverId = "__leoObserverId__";
